# gamehuntr

./: .env.example  .gitignore  PRODUCT_BRIEF.md  README.md  docker-compose.yml  main.py  pyproject.toml  todo.md  vercel.json
.claude/: instructions.md
.github/workflows/: export-prices.yml
alembic/: env.py
alembic/versions/: 0000_initial.py  0001_add_ludopedia_marketplace.py  0002_add_bgg_enrichment.py  0003_add_search_count_and_users.py
api/: index.py
docs/: product-brief.md  telegram-testing.md  termos-de-uso.md
docs/plans/: daily-price-export.md  ludopedia-listing-crawler.md
docs/references/: ludopedia-galileo-example.html
scripts/: export_prices.py  gen_telegram_session.py  push_env_to_vercel.py  setup_webhook.py  test_bgg.py  test_preco.py  test_scrapers.py  test_telegram.py
src/: config.py  database.py  models.py  services.py
src/api/: webhook.py
src/bot/: handlers.py  main.py
src/jobs/: price_export.py
src/scrapers/: adaptive.py  amazon.py  amazon_wishlist.py  bgg.py  bgg_ranks.py  fetch.py  ludopedia.py  ludopedia_marketplace.py  ludopedia_ranking.py
